changed function names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(list.to.gmx)
 export(list2genes)
 export(load.MSigDB)
 export(load.genesets)
-export(plot.matched.model.divergence)
+export(plot.matched.sample.divergence)
 export(run.FGSEA)
 export(run.ssGSEA)
 export(run.topGO)
