--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,19 +3,23 @@
 export("%>%")
 export(GO2DE.metrics)
 export(GO2gene.signature)
+export(abs.max)
 export(add.signed.log.p)
 export(code2genes)
 export(gene2GO.signature)
 export(get.MSigDB.genesets)
 export(get.contrast.results)
+export(get.deltas)
 export(get.matched.lines)
 export(get.rnk.vector)
 export(ggplot.colors)
+export(lin.map)
 export(list.to.gmx)
 export(list2genes)
 export(load.MSigDB)
 export(load.genesets)
 export(plot.matched.sample.divergence)
+export(qin.map)
 export(run.FGSEA)
 export(run.ssGSEA)
 export(run.topGO)
