--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,11 @@ export(GO2DE.metrics)
 export(GO2gene.signature)
 export(abs.max)
 export(add.signed.log.p)
+export(centered.breaks)
 export(code2genes)
+export(corner)
 export(gene2GO.signature)
+export(geom.mean)
 export(get.MSigDB.genesets)
 export(get.contrast.results)
 export(get.deltas)
@@ -14,17 +17,21 @@ export(get.matched.lines)
 export(get.rnk.vector)
 export(ggplot.colors)
 export(lin.map)
+export(lin.scl)
 export(list.to.gmx)
 export(list2genes)
 export(load.MSigDB)
 export(load.genesets)
+export(lsos)
 export(plot.matched.sample.divergence)
 export(qin.map)
+export(quantile.normalization)
 export(run.FGSEA)
 export(run.ssGSEA)
 export(run.topGO)
 export(search.GO.tbl)
 export(theme_nb_discrete)
+export(z.scale)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_point)
