added gene filtering for DE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,11 @@ export(add.signed.log.p)
 export(centered.breaks)
 export(code2genes)
 export(corner)
+export(filter.genes.for.DE)
 export(gene2GO.signature)
 export(geom.mean)
 export(get.MSigDB.genesets)
+export(get.conf.int.error)
 export(get.contrast.results)
 export(get.deltas)
 export(get.matched.lines)
@@ -23,6 +25,7 @@ export(list2genes)
 export(load.MSigDB)
 export(load.genesets)
 export(lsos)
+export(mean.z.score)
 export(plot.matched.sample.divergence)
 export(qin.map)
 export(quantile.normalization)
