--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(load.MSigDB)
 export(load.genesets)
 export(lsos)
 export(mean.z.score)
+export(overlap.features)
 export(plot.matched.sample.divergence)
 export(qin.map)
 export(quantile.normalization)
@@ -37,6 +38,7 @@ export(theme_nb_discrete)
 export(z.scale)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2, geom_blank)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_violin)
