--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(load.MSigDB)
 export(load.genesets)
 export(lsos)
 export(mean.z.score)
+export(melt.and.merge)
 export(overlap.features)
 export(plot.matched.sample.divergence)
 export(qin.map)
