--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(GO2DE.metrics)
 export(GO2gene.signature)
 export(abs.max)
 export(add.signed.log.p)
+export(annotate.lipid.species)
 export(centered.breaks)
 export(code2genes)
 export(corner)
@@ -18,6 +19,7 @@ export(get.deltas)
 export(get.matched.lines)
 export(get.rnk.vector)
 export(ggplot.colors)
+export(inverse.list)
 export(lin.map)
 export(lin.scl)
 export(list.to.gmx)
