--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(list2genes)
 export(load.MSigDB)
 export(load.genesets)
 export(lsos)
+export(match.features)
 export(mean.z.score)
 export(melt.and.merge)
 export(overlap.features)
