--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(run.FGSEA)
 export(run.ssGSEA)
 export(run.topGO)
 export(search.GO.tbl)
+export(split.df)
 export(theme_nb_discrete)
 export(z.scale)
 importFrom(ggplot2,aes)
