--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,12 @@ export(centered.breaks)
 export(code2genes)
 export(corner)
 export(filter.genes.for.DE)
+export(fisherz)
+export(fisherz.avg.cor)
+export(fisherz.pvalue)
+export(fisherz.t.pvalue)
+export(fisherz.test)
+export(fisherz2f)
 export(gene2GO.signature)
 export(geom.mean)
 export(get.MSigDB.genesets)
