--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(fisherz.avg.cor)
 export(fisherz.pvalue)
 export(fisherz.t.pvalue)
 export(fisherz.test)
-export(fisherz2f)
+export(fisherz2r)
 export(gene2GO.signature)
 export(geom.mean)
 export(get.MSigDB.genesets)
@@ -40,6 +40,7 @@ export(overlap.features)
 export(plot.matched.sample.divergence)
 export(qin.map)
 export(quantile.normalization)
+export(r2t)
 export(run.FGSEA)
 export(run.ssGSEA)
 export(run.topGO)
