--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(GO2gene.signature)
 export(abs.max)
 export(add.signed.log.p)
 export(annotate.lipid.species)
+export(calc.gvf)
+export(calc.ss)
 export(centered.breaks)
 export(code2genes)
 export(corner)
@@ -22,6 +24,7 @@ export(get.MSigDB.genesets)
 export(get.conf.int.error)
 export(get.contrast.results)
 export(get.deltas)
+export(get.jenks.labels)
 export(get.matched.lines)
 export(get.rnk.vector)
 export(ggplot.colors)
@@ -36,12 +39,14 @@ export(lsos)
 export(match.features)
 export(mean.z.score)
 export(melt.and.merge)
+export(optimize.jenks)
 export(overlap.features)
 export(plot.matched.sample.divergence)
 export(qin.map)
 export(quantile.normalization)
 export(r2t)
 export(run.FGSEA)
+export(run.jenks)
 export(run.ssGSEA)
 export(run.topGO)
 export(search.GO.tbl)
