--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(calc.gvf)
 export(calc.ss)
 export(centered.breaks)
 export(code2genes)
+export(col.vars)
 export(corner)
+export(correlate.by.group)
 export(filter.genes.for.DE)
 export(fisherz)
 export(fisherz.avg.cor)
@@ -45,6 +47,7 @@ export(plot.matched.sample.divergence)
 export(qin.map)
 export(quantile.normalization)
 export(r2t)
+export(row.vars)
 export(run.FGSEA)
 export(run.jenks)
 export(run.ssGSEA)
@@ -52,6 +55,7 @@ export(run.topGO)
 export(search.GO.tbl)
 export(split.df)
 export(theme_nb_discrete)
+export(variance.filter)
 export(z.scale)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
