--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(get.conf.int.error)
 export(get.contrast.results)
 export(get.deltas)
 export(get.jenks.labels)
+export(get.lipid.category)
 export(get.matched.lines)
 export(get.rnk.vector)
 export(ggplot.colors)
