added get.acyl.tails function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(fisherz.test)
 export(fisherz2r)
 export(gene2GO.signature)
 export(geom.mean)
+export(get.acyl.tails)
 export(get.MSigDB.genesets)
 export(get.conf.int.error)
 export(get.contrast.results)
