added Saturation to acyl tail annotation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(get.jenks.labels)
 export(get.lipid.category)
 export(get.matched.lines)
 export(get.rnk.vector)
+export(get.tail.saturation)
 export(ggplot.colors)
 export(inverse.list)
 export(lin.map)
