added percent.total function requiring tibble package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(GO2DE.metrics)
 export(GO2gene.signature)
 export(abs.max)
+export(abundance.to.percent.total)
 export(add.signed.log.p)
 export(annotate.lipid.species)
 export(calc.gvf)
@@ -22,8 +23,9 @@ export(fisherz.test)
 export(fisherz2r)
 export(gene2GO.signature)
 export(geom.mean)
-export(get.acyl.tails)
 export(get.MSigDB.genesets)
+export(get.acyl.tails)
+export(get.chain.group)
 export(get.conf.int.error)
 export(get.contrast.results)
 export(get.deltas)
@@ -72,3 +74,4 @@ importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
 importFrom(magrittr,"%>%")
+importFrom(tibble,column_to_rownames)
