updated correlate.by.group to use Hmisc rcorr for p-values

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,5 +73,6 @@ importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_classic)
+importFrom(Hmisc,rcorr)
 importFrom(magrittr,"%>%")
 importFrom(tibble,column_to_rownames)
