added scRNA cluster annotation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(calc.ss)
 export(centered.breaks)
 export(code2genes)
 export(col.vars)
+export(combine.cluster.results)
 export(corner)
 export(correlate.by.group)
 export(filter.genes.for.DE)
@@ -29,6 +30,7 @@ export(geom.mean)
 export(get.MSigDB.genesets)
 export(get.acyl.tails)
 export(get.chain.group)
+export(get.clsuter.correlations)
 export(get.conf.int.error)
 export(get.contrast.results)
 export(get.deltas)
@@ -52,6 +54,7 @@ export(melt.and.merge)
 export(optimize.jenks)
 export(overlap.features)
 export(plot.matched.sample.divergence)
+export(prep.cluster.correlations)
 export(qin.map)
 export(quantile.normalization)
 export(r2t)
@@ -65,6 +68,7 @@ export(split.df)
 export(theme_nb_discrete)
 export(total.to.percent.class)
 export(variance.filter)
+export(write.cluster.results)
 export(z.scale)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
