added PCA function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,7 @@ export(geom.mean)
 export(get.MSigDB.genesets)
 export(get.acyl.tails)
 export(get.chain.group)
-export(get.clsuter.correlations)
+export(get.cluster.correlations)
 export(get.conf.int.error)
 export(get.contrast.results)
 export(get.deltas)
@@ -54,7 +54,8 @@ export(melt.and.merge)
 export(optimize.jenks)
 export(overlap.features)
 export(plot.matched.sample.divergence)
-export(prep.cluster.correlations)
+export(plot.pca)
+export(prep.cluster.DE)
 export(qin.map)
 export(quantile.normalization)
 export(r2t)
