added rnk file function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(split.df)
 export(theme_nb_discrete)
 export(total.to.percent.class)
 export(variance.filter)
+export(write.rnk.file)
 export(z.scale)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
