added functions for coordinate rotation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,9 @@ export(get.jenks.labels)
 export(get.lipid.category)
 export(get.matched.lines)
 export(get.rnk.vector)
+export(get.rotated.coords)
+export(get.rotation.angle)
+export(get.rotation.matrix)
 export(get.tail.saturation)
 export(ggplot.colors)
 export(inverse.list)
@@ -56,6 +59,7 @@ export(plot.pca)
 export(qin.map)
 export(quantile.normalization)
 export(r2t)
+export(rotate.coords)
 export(row.vars)
 export(run.FGSEA)
 export(run.jenks)
