--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(optimize.jenks)
 export(overlap.features)
 export(plot.matched.sample.divergence)
 export(plot.pca)
+export(prop.table.2)
 export(qin.map)
 export(quantile.normalization)
 export(r2t)
