--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(overlap.features)
 export(plot.matched.sample.divergence)
 export(plot.pca)
 export(prop.table.2)
+export(two.group.row.test)
 export(qin.map)
 export(quantile.normalization)
 export(r2t)
