added factor.columns function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(code2genes)
 export(col.vars)
 export(corner)
 export(correlate.by.group)
+export(factor.columns)
 export(filter.FGSEA)
 export(filter.genes.for.DE)
 export(fisherz)
