added limma functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(get.rotation.matrix)
 export(get.tail.saturation)
 export(ggplot.colors)
 export(inverse.list)
+export(limma.fit.contrast)
 export(lin.map)
 export(lin.scl)
 export(list.to.gmx)
@@ -55,6 +56,7 @@ export(list2genes)
 export(load.MSigDB)
 export(load.genesets)
 export(lsos)
+export(make.model.matrix)
 export(match.features)
 export(mean.z.score)
 export(melt.and.merge)
@@ -73,6 +75,7 @@ export(run.FGSEA)
 export(run.jenks)
 export(run.ssGSEA)
 export(run.topGO)
+export(run.two.group.LIMMA)
 export(search.GO.tbl)
 export(split.df)
 export(theme_nb_discrete)
