--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,11 +75,11 @@ export(run.FGSEA)
 export(run.jenks)
 export(run.ssGSEA)
 export(run.topGO)
-export(run.two.group.LIMMA)
 export(search.GO.tbl)
 export(split.df)
 export(theme_nb_discrete)
 export(total.to.percent.class)
+export(two.group.limma)
 export(two.group.row.test)
 export(variance.filter)
 export(write.rnk.file)
