added function for new version of GSVA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(row.vars)
 export(run.FGSEA)
 export(run.jenks)
 export(run.ssGSEA)
+export(run.ssGSEA2)
 export(run.topGO)
 export(search.GO.tbl)
 export(split.df)
