lipidome saturation function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(abundance.to.percent.total)
 export(acyl.tail.to.bulk.class)
 export(acyl.tail.to.bulk.species)
 export(acyl.tail.to.bulk.species.by.tail)
+export(acyl.tail.to.percent.saturation)
 export(add.signed.log.p)
 export(annotate.lipid.species)
 export(calc.gvf)
